--- a/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
@@ -10,7 +10,7 @@
 
     <ui:define name="content">
         <h:form id="form">
-            <h:panelGrid columns="1">
+            <h:panelGrid columns="1" style="margin: 0 auto;">
                 <h1 align="center">Visualice y/o edite su información personal</h1>                
                 <p:fieldset legend="Actualización de la contraseña" toggleable="true" toggleSpeed="500" 
                             collapsed="true" title="Edite su contraseña de acceso a su cuenta SAITAE">
