--- a/saitae-web/src/main/webapp/pages/maestroEval.xhtml
+++ b/saitae-web/src/main/webapp/pages/maestroEval.xhtml
@@ -10,8 +10,8 @@
 
     <ui:define name="content">
         <h:form id="form">
-            <h:panelGrid columns="1">
-                <h:panelGrid columns="2">
+            <h:panelGrid columns="1" style="margin: 0 auto;">
+                <h:panelGrid columns="2" style="margin: 0 auto;">
                     <p:outputLabel for="mae" value="Maestro: "/>
                     <p:selectOneMenu id="mae" value="#{maestroEvalController.persona}" 
                                      requiredMessage="Es necesario que seleccione una opción válida."
