--- a/saitae-web/src/main/webapp/pages/contribuciones.xhtml
+++ b/saitae-web/src/main/webapp/pages/contribuciones.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="content">
         <h:form id="form1">
             <p:growl id="msgs" showDetail="true" />
-            <h:panelGrid columns="1">
+            <h:panelGrid columns="1" style="margin: 0 auto">
                 <h:panelGrid columns="2" cellspacing="2" >
                     <p:outputLabel value="Alumno:" for="aut" />
                     <p:autoComplete style="width: 190px" id="aut" 
