--- a/saitae-web/src/main/webapp/pages/horario.xhtml
+++ b/saitae-web/src/main/webapp/pages/horario.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../WEB-INF/template/plantilla1.xhtml"
+                template="./../WEB-INF/template/plantilla.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
@@ -78,7 +78,7 @@
             <h:form id="form">
                 <p:growl id="growl" showDetail="true" life="15000"/>
                 <h:panelGrid columns="1">
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="2" style="margin: 0 auto;">
                         <p:outputLabel for="años" value="Seleccione el año de visualización: "/>
                         <p:selectOneMenu id="años" value="#{horarioController.añoSelected}" 
                                          converter="omnifaces.SelectItemsConverter">
@@ -90,8 +90,7 @@
                                     update=":form:horario" 
                                     onstart="PF('D1').show();" oncomplete="PF('D1').hide();"/>
                         </p:selectOneMenu>
-                    </h:panelGrid>
-                    <h:panelGrid columns="2">
+
                         <p:outputLabel for="dias" value="Seleccione el día de visualización: "/>
                         <p:selectOneMenu id="dias" value="#{horarioController.diaSelected}" 
                                          converter="omnifaces.SelectItemsConverter">
