--- a/saitae-web/src/main/webapp/pages/paquetes.xhtml
+++ b/saitae-web/src/main/webapp/pages/paquetes.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="content">
         <h:form id="form1">
             <p:growl id="msgs" showDetail="true" />
-            <h:panelGrid columns="1">
+            <h:panelGrid columns="1" style="margin: 0 auto">
                 <h:panelGrid columns="2" cellpadding="5">
                     <p:outputLabel value="Alumno:" for="acSimple" />
                     <p:autoComplete style="width: 190px" id="acSimple" value="#{paquetesController.nie}"  
@@ -26,7 +26,7 @@
                     <p:outputLabel id="grado" value="#{paquetesController.gradoAlumno}" />
                 </h:panelGrid>
                 <h:panelGrid columns="1" cellspacing="10" >
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="1">
                         <p:panel header="Primera entrega">
                             <h:panelGrid columns="2">
                                 <p:outputLabel value="Uniforme:"/>
