--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -7,12 +7,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
-        <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
+        <ui:composition template="./../WEB-INF/template/plantilla.xhtml">
 
             <ui:define name="content">
                 <h:outputScript library="js" name="locales.js"/>
                 <h:form id="form">
-                    <h:panelGrid columns="1">
+                    <h:panelGrid columns="1" style="margin: 0 auto">
                         <h:panelGrid columns="2">
                             <p:outputLabel for="años" value="Seleccione el año de visualización: "/>
                             <p:selectOneMenu id="años" value="#{admPermisoController.añoSelected}" 
