--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html> 
 <head> 
-<title>Redirigir al navegador a otra URL</title> 
+<title>SAITAE</title> 
 <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=http://saitae.jl.serv.net.mx/saitae-web"> 
 </head> 
 <body> 
-Esta página cambia en 5 segundos por la portada de DesarrolloWeb.com 
+  Esta página debe redirigirse a <a href="http://saitae.jl.serv.net.mx/saitae-web">saitae</a>
 </body> 
 </html>
